# gas-killer-analyzer

./: .env.example  Cargo.toml  README.md  TX_EXTRACTOR_README.md  analyze.py  build.rs  example.env  requirements.txt  run_analyze.sh  service.sh  tx-hash-to-state-updates-extraction.md
.github/workflows/: docker-image.yml  rust-ci.yml  rust.yml
docs/: ZK_AVS_FRAUD_PROOFS_SPEC.md
examples/: TX_EXTRACTOR_README.md  tx_extractor_example.rs
gas-analyzer/: Cargo.toml
gas-analyzer-cli/: Cargo.toml
gas-analyzer-cli/src/: main.rs
gas-analyzer-cli/src/commands/: block.rs
gas-analyzer/src/: lib.rs  sol_types.rs
gk-alloy-adapter/: foundry.toml
gk-alloy-adapter/script/: DebugFailure.s.sol
gk-alloy-adapter/src/: DelegateCallWrapper.sol  StateChangeHandlerGasEstimator.sol
gk-alloy-adapter/test/: StateChangeHandlerGasEstimator.t.sol
res/abi/: StateChangeHandlerGasEstimator.json
src/: constants.rs  gk.rs  legacy_compare_tests.rs  lib.rs  opcode_tracer.rs  sol_types.rs  structs.rs  tx_extractor.rs
src/commands/: block.rs
test-tx-extractor/: Cargo.toml
test-tx-extractor/src/: main.rs
tx-state-extractor/: .gitignore  Cargo.toml  README.md
tx-state-extractor/examples/: basic_usage.rs
tx-state-extractor/src/: encoder.rs  lib.rs  memory.rs  parser.rs  provider.rs  types.rs
tx-state-extractor/tests/: integration_test.rs
