[package]
name = "gas-analyzer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6", features = [
    "sol-types",
    "contract",
    "rpc",
    "rpc-types",
    "node-bindings",
] }
alloy-eips = "0.12.6"
alloy-provider = { version = "0.12.6", features = ["debug-api"] }
alloy-rpc-types = { version = "0.12.6", features = ["trace"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = "4.5.40"
clap_derive = "4.5.32"
colored = "3.0.0"
csv = "1.3.1"
dotenv = "0.15.0"
env = "1.0.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
url = "2.5.4"

[build-dependencies]
serde_json = "1.0"
