[package]
name = "gas-analyzer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.3", features = ["sol-types", "contract", "rpc", "rpc-types", "node-bindings"] }
alloy-rpc-types = { version = "1.0", features = ["trace" ] }
alloy-provider = { version = "1.0", features = ["debug-api"] }
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
url = "2.5.4"
dotenv = "0.15.0"
alloy-sol-types = "1.0"
clap = "4.5.40"
clap_derive = "4.5.32"
serde_json = "1.0"
alloy-eips = "1.0.16"
env = "1.0.1"
colored = "3.0.0"
csv = "1.3.1"
serde_derive = "1.0.219"
serde = "1.0.219"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
gas-analyzer-rs = { path = "../gas-analyzer" }


[build-dependencies]
serde_json = "1.0"
