[package]
name = "test-tx-extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Using local path for testing, in real project use:
# gas-analyzer-rs = { git = "https://github.com/BreadchainCoop/gas-analyzer-rs.git", branch = "minimal-tx-state-extractor" }
gas-analyzer-rs = { path = ".." }
alloy = { version = "1.0", features = ["providers", "rpc", "rpc-types"] }
alloy-provider = { version = "1.0", features = ["debug-api"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
